Refactor critical backend services and add maintainability report.
Remove duplicate ExcelServiceNew, extract Intranet DTOs/exceptions, and simplify TurnoMatricula validations based on SonarQube and Lizard findings.

Co-authored-by: Cursor <cursoragent@cursor.com>